--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-full navbar-light"
-  style="background-color: #e3f2fd;">
+<nav class="navbar navbar-full navbar-light">
   <button class="navbar-toggler hidden-sm-up"
     type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
     &#9776;
@@ -9,40 +8,34 @@
     <a class="navbar-brand" [routerLink]="['Home']">Flow</a>
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['Discussion', {discussionId: 1}]">Heh</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['Tag', {tagId: 1}]">tag 1</a>
-      </li>
-      <li class="nav-item">
         <form class="form-inline">
           <input class="form-control" type="text" placeholder="Search">
           <button class="btn btn-primary-outline" type="submit">Search</button>
         </form>
       </li>
       <li class="nav-item">
-        <button class="btn btn-link link-unstyled"
-          (click)="createDiscussion()">Create discussion</button>
+        <a role="button" class="nav-link link-unstyled"
+          (click)="createDiscussion()">Create discussion</a>
       </li>
     </ul>
     <ul class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
         <a *ngIf="!userService.isFullUser()" role="button"
-          class="btn btn-link link-unstyled"
+          class="nav-link link-unstyled"
           (click)="loginModal.show()">Login/Signup</a>
       </li>
       <li class="nav-item">
         <a *ngIf="userService.isAnonymousUser()"
           (click)="logout()" role="button"
-          class="btn btn-link link-unstyled">Logout</a>
+          class="nav-link link-unstyled">Logout</a>
       </li>
     </ul>
     <ul *ngIf="userService.isFullUser()" class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
-        <a class="btn btn-link link-unstyled"><i class="fa fa-fw fa-bell"></i></a>
+        <a class="nav-link link-unstyled"><i class="fa fa-fw fa-bell"></i></a>
       </li>
       <li dropdown class="nav-item" keyboardNav="true">
-        <a id="simple-btn-keyboard-nav" class="btn btn-link link-unstyled"
+        <a id="simple-btn-keyboard-nav" class="nav-link link-unstyled"
           role="button" type="button" dropdownToggle>
           {{userService.getUser().name}}<span class="caret"></span>
         </a>
