--- a/ui/src/app/styles/vendor.scss
+++ b/ui/src/app/styles/vendor.scss
@@ -1,6 +1,8 @@
+@import './custom.scss';
 @import '../../../node_modules/bootstrap/scss/bootstrap-flex';
 @import './slider';
 @import '../../../node_modules/angular2-toaster/lib/toaster';
 @import './extras';
+
 
 /*@import '../../../node_modules/font-awesome/scss/font-awesome';*/
