--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="container">
-	<h3>New Discussions</h3>
+  <h3>New Discussions</h3>
   <hr>
   <div class="card-columns">
     <app-discussion-card *ngFor="let discussion of discussions"
       [discussion]="discussion"></app-discussion-card>
   </div>
 </div>
+<app-footer></app-footer>
