--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,52 +1,55 @@
 <nav class="navbar navbar-full navbar-light">
-  <button class="navbar-toggler hidden-sm-up"
-    type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
-    &#9776;
-  </button>
-  <div class="collapse navbar-toggleable-xs"
-    id="exCollapsingNavbar2">
-    <a class="navbar-brand" [routerLink]="['Home']">Flow</a>
-    <ul class="nav navbar-nav">
-      <li class="nav-item">
-        <form class="form-inline">
-          <input class="form-control" type="text" placeholder="Search">
-          <button class="btn btn-primary-outline" type="submit">Search</button>
-        </form>
-      </li>
-      <li class="nav-item">
-        <a role="button" class="nav-link link-unstyled"
-          (click)="createDiscussion()">Create discussion</a>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav pull-xs-right">
-      <li class="nav-item">
-        <a *ngIf="!userService.isFullUser()" role="button"
-          class="nav-link link-unstyled"
-          (click)="loginModal.show()">Login/Signup</a>
-      </li>
-      <li class="nav-item">
-        <a *ngIf="userService.isAnonymousUser()"
-          (click)="logout()" role="button"
-          class="nav-link link-unstyled">Logout</a>
-      </li>
-    </ul>
-    <ul *ngIf="userService.isFullUser()" class="nav navbar-nav pull-xs-right">
-      <li class="nav-item">
-        <a class="nav-link link-unstyled"><i class="fa fa-fw fa-bell"></i></a>
-      </li>
-      <li dropdown class="nav-item" keyboardNav="true">
-        <a id="simple-btn-keyboard-nav" class="nav-link link-unstyled"
-          role="button" type="button" dropdownToggle>
+  <div class="container">
+    <button class="navbar-toggler hidden-sm-up"
+      type="button" data-toggle="collapse"
+      data-target="#exCollapsingNavbar2">
+      &#9776;
+    </button>
+    <div class="collapse navbar-toggleable-xs"
+      id="exCollapsingNavbar2">
+      <a class="navbar-brand" [routerLink]="['Home']">Flow</a>
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a role="button" class="nav-link link-unstyled"
+            (click)="createDiscussion()">Create discussion</a>
+        </li>
+        <li class="nav-item">
+          <form class="form-inline">
+            <input class="form-control" type="text" placeholder="Search">
+            <button class="btn-link" type="submit"><i class="fa fa-fw fa-search"></i></button>
+          </form>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav pull-xs-right">
+        <li class="nav-item">
+          <a *ngIf="!userService.isFullUser()" role="button"
+            class="nav-link link-unstyled"
+            (click)="loginModal.show()">Login/Signup</a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="userService.isAnonymousUser()"
+            (click)="logout()" role="button"
+            class="nav-link link-unstyled">Logout</a>
+        </li>
+      </ul>
+      <ul *ngIf="userService.isFullUser()" class="nav navbar-nav pull-xs-right">
+        <li class="nav-item">
+          <a class="nav-link link-unstyled"><i class="fa fa-fw fa-bell"></i></a>
+        </li>
+        <li dropdown class="nav-item" keyboardNav="true">
+          <a id="simple-btn-keyboard-nav" class="nav-link link-unstyled"
+            role="button" type="button" dropdownToggle>
           {{userService.getUser().name}}<span class="caret"></span>
         </a>
-        <ul class="dropdown-menu" role="menu" aria-labelledby="simple-btn-keyboard-nav">
-          <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
-          <li class="divider dropdown-divider"></li>
-          <li role="menuitem"><a (click)="logout()" class="dropdown-item"
-              href="#">Logout</a></li>
-        </ul>
-      </li>
-    </ul>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="simple-btn-keyboard-nav">
+            <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+            <li class="divider dropdown-divider"></li>
+            <li role="menuitem"><a (click)="logout()" class="dropdown-item"
+                href="#">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 <!-- Modals -->
