--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,17 +1,15 @@
 <div class="container">
   <h3>New Discussions</h3>
-  <hr>
-  <div class="card-columns">
-    <app-discussion-card *ngFor="let discussion of discussions"
-      [discussion]="discussion"></app-discussion-card>
-  </div>
-  <ul *ngIf="popularTags" class="list-inline">tags:
+  <ul *ngIf="popularTags" class="list-inline">trending tags:
     <li class="label label-default list-inline-item"
       *ngFor="let tag of popularTags">
       <a class="link-unstyled" [routerLink]="['/Tag', {tagId: tag.id}]">{{removeQuotes(tag.name)}}</a>
     </li>
   </ul>
-
-  {{popularTags | json}}
+  <hr>
+  <div class="card-columns">
+    <app-discussion-card *ngFor="let discussion of discussions"
+      [discussion]="discussion"></app-discussion-card>
+  </div>
 </div>
 <app-footer></app-footer>
