--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -44,11 +44,27 @@
         <li dropdown class="nav-item" keyboardNav="true">
           <a class="nav-link link-unstyled" role="button"
             type="button" dropdownToggle>
-            <span class="label label-info navbar-label">{{unreadComments?.length}}</span>
-            <i class="fa fa-fw fa-bell-o"></i>
+            <span *ngIf="unreadMessages?.length > 0" class="label label-info navbar-label">{{unreadMessages?.length}}</span>
+            <i class="fa fa-fw fa-envelope-o"></i>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li role="menuitem"><a class="dropdown-item" href="#">Derp</a></li>
+            <h6 class="dropdown-header">Messages</h6>
+            <li *ngFor="let message of unreadMessages"
+              role="menuitem">
+              <div class="dropdown-item" role="button" (click)="gotoMessage(message)">
+                <div [innerHTML]="message.text | markdown"></div>
+                <small>
+                <ul class="list-inline">
+                  <li class="list-inline-item">from {{message.userName}}</li>
+                  <li *ngIf="message.deleted" class="text-muted list-inline-item"><small><i>deleted {{message.modified | moment}}</i></small></li>
+                  <span *ngIf="!message.deleted">
+                    <li *ngIf="!message.modified" class="text-muted list-inline-item"><small>{{message.created | moment}}</small></li>
+                    <li *ngIf="message.modified" class="text-muted list-inline-item"><small><i>modified {{message.modified | moment}}</i></small></li>
+                  </span>
+                </ul>
+                </small>
+              </div>
+            </li>
           </ul>
         </li>
         <li dropdown class="nav-item" keyboardNav="true">
