--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -59,6 +59,10 @@ blockquote {
   white-space: nowrap;
 }
 
+.dropdown-menu>li>div>div>p {
+  margin-bottom: .2rem;
+}
+
 .dropdown-menu>.active>a,
 .dropdown-menu>.active>a:focus,
 .dropdown-menu>.active>a:hover {
