--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     </button>
     <div class="collapse navbar-toggleable-xs"
       id="exCollapsingNavbar2">
-      <a class="navbar-brand" [routerLink]="['Home']">Flow</a>
+      <a class="navbar-brand" [routerLink]="['Home']"><i class="fa fa-fw fa-comment-o"></i>&nbsp;FlowChat</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a role="button" class="nav-link link-unstyled"
@@ -34,7 +34,7 @@
             class="nav-link link-unstyled"
             (click)="loginModal.show()">Login/Signup</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item hidden-xs-up">
           <a *ngIf="userService.isAnonymousUser()"
             (click)="logout()" role="button"
             class="nav-link link-unstyled">Logout</a>
