--- a/ui/src/app/components/navbar/navbar.component.scss
+++ b/ui/src/app/components/navbar/navbar.component.scss
@@ -1,17 +1,44 @@
 .fa {
-	vertical-align: inherit;
+  vertical-align: inherit;
 }
 
 .navbar {
-	border-bottom: 1px solid #e5e5e5;
-	background-color: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
+  background-color: #f5f5f5;
+  height: 60px;
 }
 
 .navbar-brand {
-	
+  font-weight: 900;
+  margin-right: 100px;
+  padding-top: .45rem;
 }
 
 .messages-dropdown {
-	left: -200px;
-	width: 435px;
+  left: -200px;
+  width: 435px;
+}
+
+.navbar-label {
+  font-size: 10px;
+  padding: 0 3px;
+  line-height: 10px;
+  position: absolute;
+  display: block;
+  right: 15px;
+}
+
+.nav-link {
+  font-size: .9375rem;
+  font-weight: 600;
+}
+
+.nav-item {
+  padding-top: .3rem;
+}
+
+@media (min-width: 544px) {
+  .form-inline .form-control {
+    width: 350px;
+  }
 }
