--- a/ui/src/app/components/footer/footer.component.html
+++ b/ui/src/app/components/footer/footer.component.html
@@ -3,11 +3,11 @@
   <footer>
     <p class="pull-right"><a href="#">back to top</a>
     </p>
-    <p>© 2016 Flow, Inc. · <a href="https://github.com/tchoulihan/flow"
-        target="_blank">about</a> · <a href="https://github.com/tchoulihan/flow"
-        target="_blank">contact</a> · <a href="https://github.com/tchoulihan/flow"
-        target="_blank">support</a> · <a href="https://github.com/tchoulihan/flow"
-        target="_blank">github</a> · <a href="https://www.reddit.com/r/flow_/">subreddit</a>
+    <p>© 2016 Flow, Inc. · <a href="https://github.com/tchoulihan/flowchat"
+        target="_blank">about</a> · <a href="https://github.com/tchoulihan/flowchat"
+        target="_blank">contact</a> · <a href="https://github.com/tchoulihan/flowchat"
+        target="_blank">support</a> · <a href="https://github.com/tchoulihan/flowchat"
+        target="_blank">github</a> · <a href="https://www.reddit.com/r/flowchat_/">subreddit</a>
       <br>
     </p>
   </footer>
