--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 *ngIf="tag">#{{tag.name}}</h2>
   <hr>
-  <div class="card-columns">
+  <div (window:scroll)="onScroll($event)" class="card-columns">
     <app-discussion-card *ngFor="let discussion of discussions"
       [discussion]="discussion"></app-discussion-card>
   </div>
