--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,8 @@
           </form>
         </li>
         <li class="nav-item">
-          <a class="nav-link link-unstyled">About</a>
+          <a class="nav-link link-unstyled" href="https://github.com/tchoulihan/flowchat"
+            target="_blank">About</a>
         </li>
         <li class="nav-item">
           <a role="button" class="nav-link link-unstyled"
@@ -32,7 +33,9 @@
         </li>
         <li class="nav-item">
           <a role="button" class="nav-link link-unstyled"
-            tooltipPlacement="bottom" tooltip="Donate"><small><i class="fa fa-fw fa-beer text-muted"></i></small></a>
+            tooltipPlacement="bottom" tooltip="Donate"
+            href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=2XTHDEBUNQ47U&lc=US&item_name=FlowChat&item_number=flowchat_02&amount=5%2e00&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted"
+            target="_blank"><small><i class="fa fa-fw fa-beer text-muted"></i></small></a>
         </li>
       </ul>
       <ul *ngIf="userService.isFullUser()" class="nav navbar-nav pull-xs-right">
