--- a/ui/src/app/components/footer/footer.component.html
+++ b/ui/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
         target="_blank">about</a> · <a href="https://github.com/tchoulihan/flowchat"
         target="_blank">contact</a> · <a href="https://github.com/tchoulihan/flowchat"
         target="_blank">support</a> · <a href="https://github.com/tchoulihan/flowchat"
-        target="_blank">github</a> · <a href="https://www.reddit.com/r/flowchat_/">subreddit</a>
+        target="_blank">github</a> · <a href="https://www.reddit.com/r/flowchat/">subreddit</a>
       <br>
     </p>
   </footer>
