Starting to work on image parsing

--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>New Discussions</h3>
+  <h3>Trending Discussions</h3>
   <small>
   <ul *ngIf="popularTags" class="list-inline">trending tags:
     <li class="label label-default list-inline-item"
