--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -1,11 +1,14 @@
 <div class="card">
-  <div class="card-block">
-    <div *ngIf="!discussion?.deleted">
-      <div *ngIf="!editMode">
+  <div *ngIf="!discussion?.deleted">
+    <div *ngIf="!editMode">
+      <div class="card-block card-block-no-bottom">
         <h4 class="card-title">
           <a [routerLink]="['/Discussion', {discussionId: discussion?.id}]" class="link-unstyled">{{discussion?.title}} </a>
           <small *ngIf="discussion && isCreator()"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
         </h4>
+      </div>
+      <img *ngIf="parseImage(discussion?.link)" class="img-fluid" src="parseImage(discussion?.link)">
+      <div class="card-block card-block-no-top">
         <p *ngIf="discussion?.text" class="card-text"
           [innerHTML]="discussion.text | markdown"></p>
         <small>
@@ -50,7 +53,9 @@
           />
         </div>
       </div>
-      <div *ngIf="editMode && discussion?.title">
+    </div>
+    <div *ngIf="editMode && discussion?.title">
+      <div class="card-block">
         <div class="form-group row">
           <label class="col-sm-1 form-control-label">Title</label>
           <div class="col-sm-11">
@@ -90,8 +95,8 @@
               (typeaheadNoResults)="tagChangeTypeaheadNoResults($event)"
               class="form-control" minlength="5"
               maxlength="20" pattern="[a-zA-Z0-9_-]+">
-            <button [disabled]="!tagTerm.valid || tagTerm.value.length == 0" (click)="createTag()"
-              class="input-group-addon btn btn-primary"><i class="fa fa-fw fa-plus"></i></button>
+            <button [disabled]="!tagTerm.valid || tagTerm.value.length == 0"
+              (click)="createTag()" class="input-group-addon btn btn-primary"><i class="fa fa-fw fa-plus"></i></button>
           </div>
           <ul *ngIf="discussion?.tags" class="col-md-6 list-inline form-control-label">
             <li role="button" (click)="removeTag(tag)"
@@ -179,8 +184,8 @@
         </div>
       </div>
     </div>
-    <div *ngIf="discussion?.deleted">
-      <i>deleted {{discussion?.modified | moment}}</i>      by {{discussion?.userName}}
-    </div>
+  </div>
+  <div *ngIf="discussion?.deleted">
+    <i>deleted {{discussion?.modified | moment}}</i>    by {{discussion?.userName}}
   </div>
 </div>
