--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -7,7 +7,9 @@
           <small *ngIf="discussion && isCreator()"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
         </h4>
       </div>
-      <img *ngIf="discussion?.link && parseImageThumbnail(discussion?.link)" class="img-fluid" [src]="parseImageThumbnail(discussion?.link)">
+      <a *ngIf="discussion?.link && parseImageThumbnail(discussion?.link)" href="{{discussion?.link}}" target="_blank">
+        <img class="img-fluid" [src]="parseImageThumbnail(discussion?.link)">
+      </a>
       <div class="card-block card-block-no-top">
         <p *ngIf="discussion?.text" class="card-text"
           [innerHTML]="discussion.text | markdown"></p>
