Get rid of collapsing navbar

--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,12 +1,6 @@
 <nav class="navbar navbar-full navbar-light">
   <div class="container-fluid">
-    <button class="navbar-toggler hidden-sm-up"
-      type="button" data-toggle="collapse"
-      data-target="#exCollapsingNavbar2">
-      &#9776;
-    </button>
-    <div class="collapse navbar-toggleable-xs"
-      id="exCollapsingNavbar2">
+    <div>
       <a class="navbar-brand" [routerLink]="['Home']"><i class="fa fa-fw fa-comment-o"></i>&nbsp;FlowChat</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
