Got smart scrolling for comments working, with a max-depth and topLimit. Current batch fetch size and max depth is 20

--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="row bottom-margin">
-  <div class="col-xs-12 col-lg-10">
+  <div class="col-xs-12 col-lg-10" (window:scroll)="onScroll($event)">
     <app-discussion-card [discussion]="discussion" [editMode]="editMode()"></app-discussion-card>
     <div *ngFor="let comment of comments" class="card">
       <app-comment [comment]="comment" (replyingEvent)="setIsReplying($event)"></app-comment>
